# dashzen

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
.cursor/rules/: agent-no-hardcode.mdc  agent-prompts.mdc  python-standards.mdc
.github/workflows/: cd.yml  ci.yml  deploy.yml  e2e.yml
apps/api/: pyproject.toml
apps/api/src/api/: auth_responses.py  deps.py  errors.py  main.py  rate_limit.py  rate_limit_deps.py
apps/api/src/api/monitoring/: cleanup.py  metrics.py
apps/api/src/api/routes/: artifacts.py  auth.py  auth_github.py  auth_google.py  compact.py  export.py  gates.py  health.py  llm.py  projects.py  stream.py  tasks.py  upload.py  users.py
apps/api/src/api/schemas/: artifacts.py  gates.py  projects.py  tasks.py
apps/api/tests/: auth_helpers.py  conftest.py  test_account_management.py  test_artifacts_api.py  test_auth_api.py  test_auth_email_edge_cases.py  test_auth_github_api.py  test_auth_google_api.py  test_auth_integration.py  test_auth_security.py  test_cors.py  test_email_verification.py  test_export_upload_api.py  test_gates_api.py  test_jwt.py  test_jwt_extended.py  test_otp.py  test_otp_extended.py  test_password.py  test_password_validation.py  test_projects_api.py  test_rate_limit.py  test_stream_api.py  test_tasks_api.py
apps/studio/: .env.local.example  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts
apps/studio/app/: layout.tsx
apps/studio/components/: providers.tsx
apps/studio/e2e/: smoke.spec.ts
apps/studio/lib/: utils.test.ts
infra/compose/: docker-compose.yml
infra/deploy/: paas.md
plan/: 01-project-structure-and-techstack.md  02-ui-features-chat-agent.md  github-oauth-login.md  google-oauth-login.md
plan/phases/Backend/: README.md  phase-1-foundation.md  phase-2-agent-pipeline.md  phase-3-scale-production.md
plan/phases/UI/: 02-ui-features-chat-agent.md  README.md
plan/prompts/agents/: dashboard-builder.md  dashboard-critic.md  dashboard-planner.md  data-binder.md  layout-designer.md
plan/refactor_ui/: BUNDLE_BASELINE.md  DEBT.md  nextjs-refactor-ui-ux.md  nextjs-refactor-ui.md
plan/research/: 01-hermes-agent-research.md  02-leadzen-agent-research.md  03-comparison-synthesis.md
scripts/: dev-infra.sh  dev-restart.sh  migrate.sh  start-api.sh
(+240 files in other folders)
