[project]
name = "api"
version = "0.1.0"
description = "DashZen FastAPI — REST + SSE adapter"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "core",
    "agents",
    "db",
]

[tool.uv.sources]
core = { workspace = true }
agents = { workspace = true }
db = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
